Thu Jun 17 08:33:14 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Deployment/descriptors/Plan.cdp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ports/Shapes_Control_obj.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ports/Shapes_Control_obj.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/src/Shapes_Control_comp.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/src/Shapes_Control_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/src/Shapes_Control_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/src/Shapes_Control_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesReceiver_comp/src/Shapes_Receiver_comp.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesReceiver_comp/src/Shapes_Receiver_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesReceiver_comp/src/Shapes_Receiver_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesReceiver_comp/src/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesSender_comp/src/Shapes_Sender_comp.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesSender_comp/src/Shapes_Sender_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesSender_comp/src/Shapes_Sender_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesSender_comp/src/Shapes_Sender_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ports/ShapesControl_obj.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ports/ShapesControl_obj.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/src/ShapesControl_comp.idl: